--- a/index.html
+++ b/index.html
@@ -5,94 +5,175 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style_margin.css">
+    <link rel="stylesheet" href="./css/style-line-height.css">
+
+    <title>Grid CSS</title>
 </head>
 
 <body>
     <div class="title">
+        <p>Grid margin</p>
+    </div>
+
+    <!-- Grid margin start -->
+    <div class="wrapper-start">
+        <div class="container-margin-start">
+            <div class="element element-one-margin-start">top left</div>
+        </div>
+
+        <div class="container-margin-start">
+            <div class="element element-two-margin-start">center left</div>
+        </div>
+
+        <div class="container-margin-start">
+            <div class="element element-three-margin-start">bottom left</div>
+        </div>
+
+        <div class="container-margin-start">
+            <div class="element element-four-margin-start">top center</div>
+        </div>
+
+        <div class="container-margin-start">
+            <div class="element element-five-margin-start">center center</div>
+        </div>
+
+        <div class="container-margin-start">
+            <div class="element element-six-margin-start">bottom center</div>
+        </div>
+
+        <div class="container-margin-start">
+            <div class="element element-seven-margin-start">top right</div>
+        </div>
+
+        <div class="container-margin-start">
+            <div class="element element-eight-margin-start">center right</div>
+        </div>
+
+        <div class="container-margin-start">
+            <div class="element element-nine-margin-start">bottom right</div>
+        </div>
+    </div>
+
+    <!-- Grid margin end -->
+    <div class="wrapper-end">
+        <div class="container-margin-end">
+            <div class="element element-one-margin">top left</div>
+        </div>
+
+        <div class="container-margin-end">
+            <div class="element element-two-margin">center left</div>
+        </div>
+
+        <div class="container-margin-end">
+            <div class="element element-three-margin">bottom left</div>
+        </div>
+
+        <div class="container-margin-end">
+            <div class="element element-four-margin">top center</div>
+        </div>
+
+        <div class="container-margin-end">
+            <div class="element element-five-margin">center center</div>
+        </div>
+
+        <div class="container-margin-end">
+            <div class="element element-six-margin">bottom center</div>
+        </div>
+
+        <div class="container-margin-end">
+            <div class="element element-seven-margin">top right</div>
+        </div>
+
+        <div class="container-margin-end">
+            <div class="element element-eight-margin">center right</div>
+        </div>
+
+        <div class="container-margin-end">
+            <div class="element element-nine-margin">bottom right</div>
+        </div>
+    </div>
+
+    <div class="title">
         <p>Grid line-height</p>
     </div>
-    <div class="wrapper-initial">
-        <!-- Grid line-height inicial-->
-        <div class="container-end container-one">
-            <div class="element-end element-one">top left</div>
+
+    <div class="wrapper-start">
+        <!-- Grid line-height start-->
+        <div class="container-start container-one">
+            <div class="element element-one-line-height">top left</div>
         </div>
 
-        <div class="container-end container-one">
-            <div class="element-end element-two">center left</div>
+        <div class="container-start container-one">
+            <div class="element element-two-line-height">center left</div>
         </div>
 
-        <div class="container-end container-one">
-            <div class="element-end element-three">bottom left</div>
+        <div class="container-start container-one">
+            <div class="element element-three-line-height">bottom left</div>
         </div>
 
-        <div class="container-end container-two">
-            <div class="element-end element-four">top center</div>
+        <div class="container-start container-two">
+            <div class="element element-four-line-height">top center</div>
         </div>
 
-        <div class="container-end container-two">
-            <div class="element-end element-five">center center</div>
+        <div class="container-start container-two">
+            <div class="element element-five-line-height">center center</div>
         </div>
 
-        <div class="container-end container-two">
-            <div class="element-end element-six">bottom center</div>
+        <div class="container-start container-two">
+            <div class="element element-six-line-height">bottom center</div>
         </div>
 
-        <div class="container-end container-three">
-            <div class="element-end element-seven">top right</div>
+        <div class="container-start container-three">
+            <div class="element element-seven-line-height">top right</div>
         </div>
 
-        <div class="container-end container-three">
-            <div class="element-end element-eight">center right</div>
+        <div class="container-start container-three">
+            <div class="element element-eight-line-height">center right</div>
         </div>
 
-        <div class="container-end container-three">
-            <div class="element-end element-nine">bottom right</div>
-        </div>
-    </div>
-
-    <div class="wrapper">
-        <!-- Grid line-height final -->
-        <div class="container container1">
-            <div class="element element1">top left</div>
-        </div>
-
-        <div class="container container1">
-            <div class="element element2">center left</div>
-        </div>
-
-        <div class="container container1">
-            <div class="element element3">bottom left</div>
-        </div>
-
-        <div class="container container2">
-            <div class="element element4">top center</div>
-        </div>
-
-        <div class="container container2">
-            <div class="element element5">center center</div>
-        </div>
-
-        <div class="container container2">
-            <div class="element element6">bottom center</div>
-        </div>
-
-        <div class="container container3">
-            <div class="element element7">top right</div>
-        </div>
-
-        <div class="container container3">
-            <div class="element element8">center right</div>
-        </div>
-
-        <div class="container container3">
-            <div class="element element9">bottom right</div>
+        <div class="container-start container-three">
+            <div class="element element-nine-line-height">bottom right</div>
         </div>
     </div>
 
-    <div class="button-next">
-        <button type="submit">Nex</button>
+    <div class="wrapper-end">
+        <!-- Grid line-height end -->
+        <div class="container container-one-line">
+            <div class="element element-one-line">top left</div>
+        </div>
+
+        <div class="container container-one-line">
+            <div class="element element-two-line">center left</div>
+        </div>
+
+        <div class="container container-one-line">
+            <div class="element element-three-line">bottom left</div>
+        </div>
+
+        <div class="container container-two-line">
+            <div class="element element-four-line">top center</div>
+        </div>
+
+        <div class="container container-two-line">
+            <div class="element element-five-line">center center</div>
+        </div>
+
+        <div class="container container-two-line">
+            <div class="element element-six-line">bottom center</div>
+        </div>
+
+        <div class="container container-three-line">
+            <div class="element element-seven-line">top right</div>
+        </div>
+
+        <div class="container container-three-line">
+            <div class="element element-eight-line">center right</div>
+        </div>
+
+        <div class="container container-three-line">
+            <div class="element element-nine-line">bottom right</div>
+        </div>
     </div>
 
 </body>
