--- a/table-cell.html
+++ b/table-cell.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style_tableCell.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style_position.css">
+    <title>Grid css</title>
 </head>
 
 <body>
@@ -15,78 +16,160 @@
     </div>
 
     <!-- table cell start -->
-    <div class="container container1">
-        <div class="element element1">top left</div>
+    <div class="container container-start-one">
+        <div class="element element-start-one">top left</div>
     </div>
 
-    <div class="container container2">
-        <div class="element element1">center left</div>
+    <div class="container container-start-two">
+        <div class="element element-start-one">center left</div>
     </div>
 
-    <div class="container container3">
-        <div class="element element1">bottom left</div>
+    <div class="container container-start-three">
+        <div class="element element-start-one">bottom left</div>
     </div>
 
-    <div class="container container4">
-        <div class="element element2">top center</div>
+    <div class="container container-start-four">
+        <div class="element element-start-two">top center</div>
     </div>
 
-    <div class="container container5">
-        <div class="element element2">center center</div>
+    <div class="container container-start-five">
+        <div class="element element-start-two">center center</div>
     </div>
 
-    <div class="container container6">
-        <div class="element element2">bottom center</div>
+    <div class="container container-start-six">
+        <div class="element element-start-two">bottom center</div>
     </div>
 
-    <div class="container container7">
-        <div class="element element3">top right</div>
+    <div class="container container-start-seven">
+        <div class="element element-start-three">top right</div>
     </div>
 
-    <div class="container container8">
-        <div class="element element3">center right</div>
+    <div class="container container-start-eight">
+        <div class="element element-start-three">center right</div>
     </div>
 
-    <div class="container container9">
-        <div class="element element3">bottom right</div>
+    <div class="container container-start-nine">
+        <div class="element element-start-three">bottom right</div>
     </div>
     <br>
 
     <!-- table cell end -->
-    <div class="container container1">
-        <div class="element element1">top left</div>
+    <div class="container-end container-one">
+        <div class="element element-one">top left</div>
     </div>
 
-    <div class="container container2">
-        <div class="element element1">center left</div>
+    <div class="container-end container-two">
+        <div class="element element-one">center left</div>
     </div>
 
-    <div class="container container3">
-        <div class="element element1">bottom left</div>
+    <div class="container-end container-three">
+        <div class="element element-one">bottom left</div>
     </div>
 
-    <div class="container container4">
-        <div class="element element2">top center</div>
+    <div class="container-end container-four">
+        <div class="element element-two">top center</div>
     </div>
 
-    <div class="container container5">
-        <div class="element element2">center center</div>
+    <div class="container-end container-five">
+        <div class="element element-two">center center</div>
     </div>
 
-    <div class="container container6">
-        <div class="element element2">bottom center</div>
+    <div class="container-end container-six">
+        <div class="element element-two">bottom center</div>
     </div>
 
-    <div class="container container7">
-        <div class="element element3">top right</div>
+    <div class="container-end container-seven">
+        <div class="element element-three">top right</div>
     </div>
 
-    <div class="container container8">
-        <div class="element element3">center right</div>
+    <div class="container-end container-eight">
+        <div class="element element-three">center right</div>
     </div>
 
-    <div class="container container9">
-        <div class="element element3">bottom right</div>
+    <div class="container-end container-nine">
+        <div class="element element-three">bottom right</div>
+    </div>
+
+    <div class="title">
+        <p>Grid position</p>
+    </div>
+
+    <!-- Grid position -->
+    <div class="wrapper">
+        <div class="container-position">
+            <div class="element element-position-1">top left</div>
+        </div>
+
+        <div class="container-position">
+            <div class="element element-position-2">center left</div>
+        </div>
+
+        <div class="container-position">
+            <div class="element element-position-3">bottom left</div>
+        </div>
+
+        <div class="container-position">
+            <div class="element element-position-4">top center</div>
+        </div>
+
+        <div class="container-position">
+            <div class="element element-position-5">center center</div>
+        </div>
+
+        <div class="container-position">
+            <div class="element element-position-6">bottom center</div>
+        </div>
+
+        <div class="container-position">
+            <div class="element element-position-7">top right</div>
+        </div>
+
+        <div class="container-position">
+            <div class="element element-position-8">center right</div>
+        </div>
+
+        <div class="container-position">
+            <div class="element element-position-9">bottom right</div>
+        </div>
+    </div>
+
+    <!-- Grid position end -->
+    <div class="wrapper">
+        <div class="container-position-end">
+            <div class="element-position element-position-one">top left</div>
+        </div>
+
+        <div class="container-position-end">
+            <div class="element-position element-position-two">center left</div>
+        </div>
+
+        <div class="container-position-end">
+            <div class="element-position element-position-three">bottom left</div>
+        </div>
+
+        <div class="container-position-end">
+            <div class="element-position element-position-four">top center</div>
+        </div>
+
+        <div class="container-position-end">
+            <div class="element-position element-position-five">center center</div>
+        </div>
+
+        <div class="container-position-end">
+            <div class="element-position element-position-six">bottom center</div>
+        </div>
+
+        <div class="container-position-end">
+            <div class="element-position element-position-seven">top right</div>
+        </div>
+
+        <div class="container-position-end">
+            <div class="element-position element-position-eight">center right</div>
+        </div>
+
+        <div class="container-position-end">
+            <div class="element-position element-position-nine">bottom right</div>
+        </div>
     </div>
 </body>
 
