--- a/modes_challenge.html
+++ b/modes_challenge.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/mode_challenge.css">
-    <title>Grid css</title>
+    <title>Alignment techniques</title>
 </head>
 
 <body>
     <div class="title">
-        <p>Writing mode challenge</p>
+        <p>Writing modes challenge</p>
     </div>
 
     <div class="card">
