--- a/table-cell.html
+++ b/table-cell.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style_tableCell.css">
     <link rel="stylesheet" href="./css/style_position.css">
-    <title>Grid css</title>
+    <title>Alignment techniques</title>
 </head>
 
 <body>
     <div class="title">
-        <p>Grid table cell</p>
+        <p>Table cell</p>
     </div>
 
-    <!-- table cell start -->
+    <!-- Table cell start -->
     <div class="container container-start-one">
         <div class="element element-start-one">top left</div>
     </div>
@@ -53,7 +53,7 @@
     </div>
     <br>
 
-    <!-- table cell end -->
+    <!-- Table cell end -->
     <div class="container-end container-one">
         <div class="element element-one">top left</div>
     </div>
@@ -91,10 +91,10 @@
     </div>
 
     <div class="title">
-        <p>Grid position</p>
+        <p>Positions</p>
     </div>
 
-    <!-- Grid position -->
+    <!-- Position -->
     <div class="wrapper">
         <div class="container-position">
             <div class="element element-position-1">top left</div>
@@ -133,7 +133,7 @@
         </div>
     </div>
 
-    <!-- Grid position end -->
+    <!-- Position end -->
     <div class="wrapper">
         <div class="container-position-end">
             <div class="element-position element-position-one">top left</div>
