--- a/index.html
+++ b/index.html
@@ -6,175 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style_margin.css">
-    <link rel="stylesheet" href="./css/style-line-height.css">
 
-    <title>Grid CSS</title>
+    <title>Técnicas de alineamiento</title>
 </head>
 
 <body>
     <div class="title">
-        <p>Grid margin</p>
+        <p>Técnicas de alineamiento</p>
     </div>
 
-    <!-- Grid margin start -->
-    <div class="wrapper-start">
-        <div class="container-margin-start">
-            <div class="element element-one-margin-start">top left</div>
-        </div>
+    <form action="./grid_margin.html">
+        <input class="button_submit" type="submit" value="Margin and Line-height" />
+    </form>
 
-        <div class="container-margin-start">
-            <div class="element element-two-margin-start">center left</div>
-        </div>
+    <form action="./table-cell.html">
+        <input class="button_submit" type="submit" value="Table cell and Positions" />
+    </form>
 
-        <div class="container-margin-start">
-            <div class="element element-three-margin-start">bottom left</div>
-        </div>
+    <form action="./modes_challenge.html">
+        <input class="button_submit" type="submit" value="Writing modes challenge" />
+    </form>
 
-        <div class="container-margin-start">
-            <div class="element element-four-margin-start">top center</div>
-        </div>
-
-        <div class="container-margin-start">
-            <div class="element element-five-margin-start">center center</div>
-        </div>
-
-        <div class="container-margin-start">
-            <div class="element element-six-margin-start">bottom center</div>
-        </div>
-
-        <div class="container-margin-start">
-            <div class="element element-seven-margin-start">top right</div>
-        </div>
-
-        <div class="container-margin-start">
-            <div class="element element-eight-margin-start">center right</div>
-        </div>
-
-        <div class="container-margin-start">
-            <div class="element element-nine-margin-start">bottom right</div>
-        </div>
-    </div>
-
-    <!-- Grid margin end -->
-    <div class="wrapper-end">
-        <div class="container-margin-end">
-            <div class="element element-one-margin">top left</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-two-margin">center left</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-three-margin">bottom left</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-four-margin">top center</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-five-margin">center center</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-six-margin">bottom center</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-seven-margin">top right</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-eight-margin">center right</div>
-        </div>
-
-        <div class="container-margin-end">
-            <div class="element element-nine-margin">bottom right</div>
-        </div>
-    </div>
-
-    <div class="title">
-        <p>Grid line-height</p>
-    </div>
-
-    <div class="wrapper-start">
-        <!-- Grid line-height start-->
-        <div class="container-start container-one">
-            <div class="element element-one-line-height">top left</div>
-        </div>
-
-        <div class="container-start container-one">
-            <div class="element element-two-line-height">center left</div>
-        </div>
-
-        <div class="container-start container-one">
-            <div class="element element-three-line-height">bottom left</div>
-        </div>
-
-        <div class="container-start container-two">
-            <div class="element element-four-line-height">top center</div>
-        </div>
-
-        <div class="container-start container-two">
-            <div class="element element-five-line-height">center center</div>
-        </div>
-
-        <div class="container-start container-two">
-            <div class="element element-six-line-height">bottom center</div>
-        </div>
-
-        <div class="container-start container-three">
-            <div class="element element-seven-line-height">top right</div>
-        </div>
-
-        <div class="container-start container-three">
-            <div class="element element-eight-line-height">center right</div>
-        </div>
-
-        <div class="container-start container-three">
-            <div class="element element-nine-line-height">bottom right</div>
-        </div>
-    </div>
-
-    <div class="wrapper-end">
-        <!-- Grid line-height end -->
-        <div class="container container-one-line">
-            <div class="element element-one-line">top left</div>
-        </div>
-
-        <div class="container container-one-line">
-            <div class="element element-two-line">center left</div>
-        </div>
-
-        <div class="container container-one-line">
-            <div class="element element-three-line">bottom left</div>
-        </div>
-
-        <div class="container container-two-line">
-            <div class="element element-four-line">top center</div>
-        </div>
-
-        <div class="container container-two-line">
-            <div class="element element-five-line">center center</div>
-        </div>
-
-        <div class="container container-two-line">
-            <div class="element element-six-line">bottom center</div>
-        </div>
-
-        <div class="container container-three-line">
-            <div class="element element-seven-line">top right</div>
-        </div>
-
-        <div class="container container-three-line">
-            <div class="element element-eight-line">center right</div>
-        </div>
-
-        <div class="container container-three-line">
-            <div class="element element-nine-line">bottom right</div>
-        </div>
-    </div>
+    <form action="./flexbox.html">
+        <input class="button_submit" type="submit" value="Flexbox" />
+    </form>
 
 </body>
 
