--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <input class="button_submit" type="submit" value="Flexbox" />
     </form>
 
+    <form action="./drawing.html">
+        <input class="button_submit" type="submit" value="drawing settings" />
+    </form>
+
 </body>
 
 </html>
