--- a/drawing.html
+++ b/drawing.html
@@ -6,28 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/drawing.css">
-    <title>Document</title>
+    <title>Drawing</title>
 </head>
 
 <body>
     <div class="container">
         <div class="square">
             <div class="head">
+                <div class="neck"></div>
                 <div class="had"></div>
                 <div class="had_"></div>
-                <div class="eye-left"></div>
-                <div class="eye-right"></div>
-                <div class="pupila-lefr"></div>
-                <div class="pupila-right"></div>
-                <div class="beard"></div>
-                <div class="nose"></div>
-                <div class="mouth"></div>
-                <div class="tooth"></div>
-                <div class="tongue"></div>
-                <div class="eart_left"></div>
-                <div class="small_eart_left"></div>
-                <div class="eart_right"></div>
-                <div class="small_eart_right"></div>
+
+                <div class="eye-left">
+                    <div class="pupila-lefr"></div>
+                </div>
+                <div class="eye-right">
+                    <div class="pupila-right"></div>
+                </div>
+
+                <div class="beard">
+                    <div class="nose"></div>
+
+                    <div class="mouth">
+                        <div class="tooth"></div>
+                        <div class="tongue"></div>
+                    </div>
+                </div>
+
+                <div class="ear_left">
+                    <div class="small_ear_left"></div>
+                </div>
+
+                <div class="ear_right">
+                    <div class="small_ear_right"></div>
+                </div>
+
             </div>
         </div>
     </div>
