Visual details adjustment

--- a/index.html
+++ b/index.html
@@ -15,25 +15,36 @@
         <p>Técnicas de alineamiento</p>
     </div>
 
-    <form action="./grid_margin.html">
-        <input class="button_submit" type="submit" value="Margin and Line-height" />
-    </form>
+    <div class="container_menu">
+        <form action="./grid_margin.html">
+            <input class="button_submit" type="submit" value="Margin" />
+        </form>
 
-    <form action="./table-cell.html">
-        <input class="button_submit" type="submit" value="Table cell and Positions" />
-    </form>
+        <form action="./line-height.html">
+            <input class="button_submit" type="submit" value="Line-height" />
+        </form>
 
-    <form action="./modes_challenge.html">
-        <input class="button_submit" type="submit" value="Writing modes challenge" />
-    </form>
+        <form action="./table-cell.html">
+            <input class="button_submit" type="submit" value="Table cell" />
+        </form>
 
-    <form action="./flexbox.html">
-        <input class="button_submit" type="submit" value="Flexbox" />
-    </form>
+        <form action="./positions.html">
+            <input class="button_submit" type="submit" value="Positions" />
+        </form>
 
-    <form action="./drawing.html">
-        <input class="button_submit" type="submit" value="drawing settings" />
-    </form>
+        <form action="./modes_challenge.html">
+            <input class="button_submit" type="submit" value="Writing modes challenge" />
+        </form>
+
+        <form action="./flexbox.html">
+            <input class="button_submit" type="submit" value="Flexbox" />
+        </form>
+
+        <form action="./drawing.html">
+            <input class="button_submit" type="submit" value="Happy character drawing" />
+        </form>
+    </div>
+
 
 </body>
 
