Immediate parents and children

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
         <form action="./drawing.html">
             <input class="button_submit" type="submit" value="Happy character drawing" />
         </form>
+
+        <form action="./content_item.html">
+            <input class="button_submit" type="submit" value="Immediate parents and children">
+        </form>
     </div>
-
-
 </body>
 
 </html>
