Display grid or inline-grid

--- a/index.html
+++ b/index.html
@@ -47,6 +47,27 @@
         <form action="./content_item.html">
             <input class="button_submit" type="submit" value="Immediate parents and children">
         </form>
+
+        <form action="./">
+            <input class="button_submit" type="submit" value="Layout grid">
+        </form>
+
+        <form action="./">
+            <input class="button_submit" type="submit" value="Project elements">
+        </form>
+
+        <form action="./display.html">
+            <input class="button_submit" type="submit" value="Display grid or inline-grid">
+        </form>
+
+        <form action="./">
+            <input class="button_submit" type="submit" value="Columns and rows">
+        </form>
+
+        <form action="./">
+            <input class="button_submit" type="submit" value="">
+        </form>
+
     </div>
 </body>
 
