Columns and rows

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <input class="button_submit" type="submit" value="Display grid or inline-grid">
         </form>
 
-        <form action="./">
+        <form action="./column-rows.html">
             <input class="button_submit" type="submit" value="Columns and rows">
         </form>
 
