--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <input class="button_submit" type="submit" value="Columns and rows">
         </form>
 
-        <form action="./">
-            <input class="button_submit" type="submit" value="">
+        <form action="./justify-content.html">
+            <input class="button_submit" type="submit" value="Justify-content">
         </form>
 
     </div>
