--- a/align-content.html
+++ b/align-content.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/justify-content.css">
-    <title>Alignment justify-content</title>
+    <link rel="stylesheet" href="./css/align-content.css">
+    <title>Alignment alight-content</title>
 </head>
 
 <body>
     <div class="title">
-        <p>Alignment justify-content</p>
+        <p>Alignment alight-content</p>
     </div>
 
     <div class="grid">
@@ -21,28 +21,12 @@
                 <div class="item"></div>
                 <div class="item"></div>
                 <div class="item"></div>
-            </div>
-        </div>
-
-        <div class="grid-container_two">
-            <div class="container">
-                <div class="item"></div>
-                <div class="item"></div>
                 <div class="item"></div>
                 <div class="item"></div>
             </div>
         </div>
 
-        <div class="grid-container_three">
-            <div class="container">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
-        </div>
-
-        <div class="grid-container_four">
+        <div class="grid-container">
             <div class="container_two">
                 <div class="item"></div>
                 <div class="item"></div>
@@ -53,7 +37,7 @@
             </div>
         </div>
 
-        <div class="grid-container_four">
+        <div class="grid-container">
             <div class="container_three">
                 <div class="item"></div>
                 <div class="item"></div>
@@ -64,8 +48,31 @@
             </div>
         </div>
 
-        <div class="grid-container_four">
+        <div class="grid-container">
             <div class="container_four">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+
+            </div>
+        </div>
+
+        <div class="grid-container">
+            <div class="container_five">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>
+        </div>
+
+        <div class="grid-container">
+            <div class="container_six">
                 <div class="item"></div>
                 <div class="item"></div>
                 <div class="item"></div>
