--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
             <input class="button_submit" type="submit" value="Justify-content">
         </form>
 
+        <form action="./align-content.html">
+            <input class="button_submit" type="submit" value="Align-content">
+        </form>
+
     </div>
 </body>
 
