Place-content quiz

--- a/align-content.html
+++ b/align-content.html
@@ -81,6 +81,17 @@
                 <div class="item"></div>
             </div>
         </div>
+
+        <div class="grid-container">
+            <div class="container_seven">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>
+        </div>
     </div>
 </body>
 
