--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             <input class="button_submit" type="submit" value="Align-content">
         </form>
 
+        <form action="./quiz-place-content.html">
+            <input class="button_submit" type="submit" value="Place-content">
+        </form>
     </div>
 </body>
 
