--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <input class="button_submit" type="submit" value="Immediate parents and children">
         </form>
 
-        <form action="./">
+        <form action="./layout-grid.html">
             <input class="button_submit" type="submit" value="Layout grid">
         </form>
 
@@ -74,6 +74,10 @@
 
         <form action="./quiz-place-content.html">
             <input class="button_submit" type="submit" value="Place-content">
+        </form>
+
+        <form action="./location.html">
+            <input class="button_submit" type="submit" value="Location">
         </form>
     </div>
 </body>
