Funciones: repeat(), minmax() y fit-content()

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
         <form action="./location.html">
             <input class="button_submit" type="submit" value="Location">
         </form>
+
+        <form action="./minmax.html">
+            <input class="button_submit" type="submit" value="function">
+        </form>
     </div>
 </body>
 
