--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
         </form>
 
         <form action="./minmax.html">
-            <input class="button_submit" type="submit" value="function">
+            <input class="button_submit" type="submit" value="Function">
+        </form>
+
+        <form action="./main-grid.html">
+            <input class="button_submit" type="submit" value="Main grid">
         </form>
     </div>
 </body>
