Auto-fill vs auto-fit

--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
         <form action="./main-grid.html">
             <input class="button_submit" type="submit" value="Main grid">
         </form>
+
+        <form action="./auto-fill-fit.html">
+            <input class="button_submit" type="submit" value="Auto-fill vs auto-fit">
+        </form>
+
+        <form action="./track.html">
+            <input class="button_submit" type="submit" value="Track">
+        </form>
     </div>
 </body>
 
