--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             <input class="button_submit" type="submit" value="Auto-fill vs auto-fit">
         </form>
 
-        <form action="./track.html">
-            <input class="button_submit" type="submit" value="Track">
+        <form action="./proyect.html">
+            <input class="button_submit" type="submit" value="Proyect">
         </form>
     </div>
 </body>
