Alignment justify-self

--- a/index.html
+++ b/index.html
@@ -92,9 +92,22 @@
             <input class="button_submit" type="submit" value="Auto-fill vs auto-fit">
         </form>
 
-        <form action="./proyect.html">
-            <input class="button_submit" type="submit" value="Proyect">
+        <form action="./project.html">
+            <input class="button_submit" type="submit" value="Project">
         </form>
+
+        <form action="./tracks.html">
+            <input class="button_submit" type="submit" value="Tracks">
+        </form>
+
+        <form action="./justify-self.html">
+            <input class="button_submit" type="submit" value="Alignment justify-self">
+        </form>
+
+        <form action="./justify-self.html">
+            <input class="button_submit" type="submit" value="Alignment justify-self">
+        </form>
+
     </div>
 </body>
 
