Alignment align-self

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             <input class="button_submit" type="submit" value="Alignment justify-self">
         </form>
 
-        <form action="./justify-self.html">
-            <input class="button_submit" type="submit" value="Alignment justify-self">
+        <form action="./align-self.html">
+            <input class="button_submit" type="submit" value="Alignment align-self">
         </form>
 
     </div>
