Alignment place-self

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
             <input class="button_submit" type="submit" value="Alignment align-self">
         </form>
 
+        <form action="./place-self.html">
+            <input class="button_submit" type="submit" value="Alignment place-self">
+        </form>
     </div>
 </body>
 
