--- a/layout-grid.html
+++ b/layout-grid.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p>Pallettes 💚</p>
+        <span class="icon">•••</span>
+    </div>
     <div class="container main">
         <div class="item-1">
             <div class="color-1"></div>
@@ -19,6 +23,7 @@
             <div class="color-4"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>1 years</p>
             </div>
         </div>
         <div class="item-1">
@@ -28,6 +33,7 @@
             <div class="color-8"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>Today</p>
             </div>
         </div>
         <div class="item-1">
@@ -37,6 +43,7 @@
             <div class="color-12"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>3 years</p>
             </div>
         </div>
         <div class="item-1">
@@ -46,6 +53,7 @@
             <div class="color-16"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>Yesterday</p>
             </div>
         </div>
         <div class="item-1">
@@ -55,6 +63,7 @@
             <div class="color-20"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>3 days</p>
             </div>
         </div>
         <div class="item-1">
@@ -64,6 +73,7 @@
             <div class="color-24"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>2 week</p>
             </div>
         </div>
         <div class="item-1">
@@ -73,6 +83,7 @@
             <div class="color-28"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>1 years</p>
             </div>
         </div>
         <div class="item-1">
@@ -82,6 +93,7 @@
             <div class="color-32"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>Today</p>
             </div>
         </div>
         <!--  -->
@@ -92,6 +104,7 @@
             <div class="color-36"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>3 days</p>
             </div>
         </div>
         <div class="item-1">
@@ -101,6 +114,7 @@
             <div class="color-40"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>1 month</p>
             </div>
         </div>
         <div class="item-1">
@@ -110,6 +124,7 @@
             <div class="color-44"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>1 week</p>
             </div>
         </div>
         <div class="item-1">
@@ -119,6 +134,7 @@
             <div class="color-48"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>Today</p>
             </div>
         </div>
         <div class="item-1">
@@ -128,6 +144,7 @@
             <div class="color-52"></div>
             <div class="margin-btn">
                 <button class="btn-main" type="submit">💚 198</button>
+                <p>Yesterday</p>
             </div>
         </div>
     </div>
