--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/proyect.css">
+    <link rel="stylesheet" href="./css/project.css">
     <title>Proyect</title>
 </head>
 
@@ -21,7 +21,7 @@
         </div>
         <div class="item-7"></div>
         <div class="item-8">
-            <p>Teffcode</p>
+            <p>code</p>
         </div>
     </div>
 </body>
