Avance de nuevo dibujo con css

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <input class="button_submit" type="submit" value="Layout grid">
         </form>
 
-        <form action="./">
-            <input class="button_submit" type="submit" value="Project elements">
+        <form action="./hairstyle.html">
+            <input class="button_submit" type="submit" value="Drawing">
         </form>
 
         <form action="./display.html">
