Se añadio css para el body

--- a/hairstyle.html
+++ b/hairstyle.html
@@ -11,24 +11,27 @@
 
 <body>
     <div class="container">
-        <div class="head">
-            <div class="hair"></div>
-            <div class="eyebrow-left"></div>
-            <div class="eyebrow-right"></div>
-            <div class="eye-left"></div>
-            <div class="eye-right"></div>
-            <div class="beard">
-                <div class="nose"></div>
-                <div class="mouth">
-                    <div class="tooth"></div>
-                    <div class="tongue"></div>
+        <div class="square">
+            <div class="body"></div>
+            <div class="head">
+                <div class="hair"></div>
+                <div class="eyebrow-left"></div>
+                <div class="eyebrow-right"></div>
+                <div class="eye-left"></div>
+                <div class="eye-right"></div>
+                <div class="beard">
+                    <div class="nose"></div>
+                    <div class="mouth">
+                        <div class="tooth"></div>
+                        <div class="tongue"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="ear_left">
-                <div class="small_ear_left"></div>
-            </div>
-            <div class="ear_right">
-                <div class="small_ear_right"></div>
+                <div class="ear_left">
+                    <div class="small_ear_left"></div>
+                </div>
+                <div class="ear_right">
+                    <div class="small_ear_right"></div>
+                </div>
             </div>
         </div>
     </div>
