--- a/hairstyle.html
+++ b/hairstyle.html
@@ -12,8 +12,12 @@
 <body>
     <div class="container">
         <div class="square">
+            <div class="ear_left"></div>
+            <div class="ear_right"></div>
             <div class="body"></div>
             <div class="head">
+                <div class="hair_left"></div>
+                <div class="hair_right"></div>
                 <div class="hair"></div>
                 <div class="eyebrow-left"></div>
                 <div class="eyebrow-right"></div>
@@ -25,12 +29,6 @@
                         <div class="tooth"></div>
                         <div class="tongue"></div>
                     </div>
-                </div>
-                <div class="ear_left">
-                    <div class="small_ear_left"></div>
-                </div>
-                <div class="ear_right">
-                    <div class="small_ear_right"></div>
                 </div>
             </div>
         </div>
