--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style_margin.css">
+    <link rel="stylesheet" href="./css/header.css">
 
     <title>Técnicas de alineamiento</title>
 </head>
 
 <body>
-    <div class="title">
-        <p>Técnicas de alineamiento</p>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p>Técnicas de alineamiento 💚</p>
+        <span class="icon">•••</span>
     </div>
 
     <div class="container_menu">
