--- a/layout-grid.html
+++ b/layout-grid.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/layout-grid.css">
+    <link rel="stylesheet" href="./css/header.css">
     <title>Layout grid</title>
 </head>
 
