Se añadio el nuevo header a las vistas

--- a/align-content.html
+++ b/align-content.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/align-content.css">
+    <link rel="stylesheet" href="./css/header.css">
     <title>Alignment alight-content</title>
 </head>
 
 <body>
-    <div class="title">
-        <p>Alignment alight-content</p>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p>Alignment alight-content 💚</p>
+        <span class="icon">•••</span>
     </div>
 
     <div class="grid">
