--- a/tracks.html
+++ b/tracks.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/tracks.css">
+    <link rel="stylesheet" href="./css/header.css">
     <title>Tracks</title>
 </head>
 
 <body>
-    <div class="title">
-        <p>Tracks</p>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p>Tracks 💚</p>
+        <span class="icon">•••</span>
     </div>
 
     <div class="container">
