--- a/auto-fill-fit.html
+++ b/auto-fill-fit.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/auto-fill-fit.css">
+    <link rel="stylesheet" href="./css/header.css">
     <title>Auto-fill vs auto-fit</title>
 </head>
 
 <body>
-    <div class="title">
-        <p>Auto-fill vs auto-fit</p>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p>Auto-fill vs auto-fit 💚</p>
+        <span class="icon">•••</span>
     </div>
 
     auto-fill
