--- a/column-rows.html
+++ b/column-rows.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/columns-rows.css">
+    <link rel="stylesheet" href="./css/header.css">
     <title>Columns and rows</title>
 </head>
 
 <body>
-    <div class="title">
-        <p>Columns and rows</p>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p>Columns and rows 💚</p>
+        <span class="icon">•••</span>
     </div>
 
     <div class="container">
