--- a/content_item.html
+++ b/content_item.html
@@ -6,10 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/content_item.css">
+    <link rel="stylesheet" href="./css/header.css">
     <title>Document</title>
 </head>
 
 <body>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p> 💚</p>
+        <span class="icon">•••</span>
+    </div>
+
     <div class="container">
         <div class="item">
             <div class="sub-item">
