--- a/display.html
+++ b/display.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/display.css">
+    <link rel="stylesheet" href="./css/header.css">
     <title>Display grid or inline-grid</title>
 </head>
 
 <body>
-    <div class="title">
-        <p>Display grid or inline-grid</p>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p>Display grid or inline-grid 💚</p>
+        <span class="icon">•••</span>
     </div>
 
     <div class="block">Block</div>
