--- a/justify-self.html
+++ b/justify-self.html
@@ -6,19 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/justify-self.css">
+    <link rel="stylesheet" href="./css/header.css">
     <title>Alignment justify-self</title>
 </head>
 
 <body>
-    <div class="title">
-        <p>Alignment justify-self</p>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p>Alignment justify-self 💚</p>
+        <span class="icon">•••</span>
     </div>
 
     <div class="container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
+        <div class="items">
+            <div class="item">1</div>
+            <div class="item">2</div>
+            <div class="item">3</div>
+            <div class="item">4</div>
+        </div>
     </div>
 </body>
 
