Se añadio el header y se ajustaron valores

--- a/positions.html
+++ b/positions.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style_tableCell.css">
     <link rel="stylesheet" href="./css/style_position.css">
+    <link rel="stylesheet" href="./css/header.css">
     <title>Alignment techniques</title>
 </head>
 
 <body>
-    <div class="title">
-        <p>Positions</p>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p>Positions 💚</p>
+        <span class="icon">•••</span>
     </div>
 
     <!-- Position -->
