--- a/place-self.html
+++ b/place-self.html
@@ -18,10 +18,12 @@
     </div>
 
     <div class="container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
+        <div class="items">
+            <div class="item">1</div>
+            <div class="item">2</div>
+            <div class="item">3</div>
+            <div class="item">4</div>
+        </div>
     </div>
 </body>
 
