Se añadio el header a las vistas restantes

--- a/content_item.html
+++ b/content_item.html
@@ -18,9 +18,11 @@
     </div>
 
     <div class="container">
-        <div class="item">
-            <div class="sub-item">
-                💚
+        <div class="container_item">
+            <div class="item">
+                <div class="sub-item">
+                    💚
+                </div>
             </div>
         </div>
     </div>
