--- a/display.html
+++ b/display.html
@@ -17,15 +17,18 @@
         <span class="icon">•••</span>
     </div>
 
-    <div class="block">Block</div>
-    <div class="grid">Grid</div>
-    <div class="flex">Flex</div>
+    <div class="container">
+        <div class="block">Block</div>
+        <div class="grid">Grid</div>
+        <div class="flex">Flex</div>
 
-    <br>
+        <br>
 
-    <div class="block_one">Block</div>
-    <div class="grid_two">Grid</div>
-    <div class="flex_three">Flex</div>
+        <div class="block_one">Block</div>
+        <div class="grid_two">Grid</div>
+        <div class="flex_three">Flex</div>
+    </div>
+
 </body>
 
 </html>
