--- a/location.html
+++ b/location.html
@@ -6,33 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/location.css">
+    <link rel="stylesheet" href="./css/header.css">
     <title>Location</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
+    <div class="header">
+        <img src="src/palettes.png" alt="logo">
+        <p>Table cell 💚</p>
+        <span class="icon">•••</span>
     </div>
 
-    <div class="container_new">
-        <div class="item_1">1</div>
-        <div class="item_2">2</div>
-        <div class="item_3">3</div>
-    </div>
+    <div class="container_main">
+        <div class="container">
+            <div class="item">1</div>
+            <div class="item">2</div>
+            <div class="item">3</div>
+        </div>
 
-    <br>
-    <div class="container_two">
-        <div class="item-one"></div>
-        <div class="item-two"></div>
-        <div class="item-three"></div>
-    </div>
+        <div class="container_new">
+            <div class="item_1">1</div>
+            <div class="item_2">2</div>
+            <div class="item_3">3</div>
+        </div>
 
-    <div class="container_three">
-        <div class="item-one"></div>
-        <div class="item-two"></div>
-        <div class="item-three"></div>
+        <div class="container_two">
+            <div class="item-one"></div>
+            <div class="item-two"></div>
+            <div class="item-three"></div>
+        </div>
+
+        <div class="container_three">
+            <div class="item-one"></div>
+            <div class="item-two"></div>
+            <div class="item-three"></div>
+        </div>
     </div>
 </body>
 
