Titulo de content-item

--- a/content_item.html
+++ b/content_item.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/content_item.css">
     <link rel="stylesheet" href="./css/header.css">
-    <title>Document</title>
+    <title>Parents and children</title>
 </head>
 
 <body>
     <div class="header">
         <img src="src/palettes.png" alt="logo">
-        <p> 💚</p>
+        <p>Parents and children 💚</p>
         <span class="icon">•••</span>
     </div>
 
