--- a/minmax.html
+++ b/minmax.html
@@ -13,11 +13,12 @@
 <body>
     <div class="header">
         <img src="src/palettes.png" alt="logo">
-        <p>Function: repeat(), minmax() y fit-content() 💚</p>
+        <p>Function 💚</p>
         <span class="icon">•••</span>
     </div>
 
     <div class="container_main">
+        Repeat()
         <div class="container">
             <div class="item"></div>
             <div class="item"></div>
@@ -27,7 +28,7 @@
         </div>
 
         <br>
-
+        Minmax()
         <div class="container_two">
             <div class="item-two"></div>
             <div class="item-two"></div>
@@ -37,6 +38,7 @@
         </div>
 
         <br>
+        Fit-content()
         <div class="container_three">
             <div class="item-three"></div>
             <div class="item-three">Fit-content()</div>
