Medium devices and Large devices

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </form>
 
         <form action="./content_item.html">
-            <input class="button_submit" type="submit" value="Immediate parents and children">
+            <input class="button_submit" type="submit" value="Immediate parents & children">
         </form>
 
         <form action="./layout-grid.html">
