Se añadieron las paginas a una carpeta

--- a/index.html
+++ b/index.html
@@ -18,99 +18,99 @@
     </div>
 
     <div class="container_menu">
-        <form action="./grid_margin.html">
+        <form action="./pages/grid_margin.html">
             <input class="button_submit" type="submit" value="Margin" />
         </form>
 
-        <form action="./line-height.html">
+        <form action="./pages/line-height.html">
             <input class="button_submit" type="submit" value="Line-height" />
         </form>
 
-        <form action="./table-cell.html">
+        <form action="./pages/table-cell.html">
             <input class="button_submit" type="submit" value="Table cell" />
         </form>
 
-        <form action="./positions.html">
+        <form action="./pages/positions.html">
             <input class="button_submit" type="submit" value="Positions" />
         </form>
 
-        <form action="./modes_challenge.html">
+        <form action="./pages/modes_challenge.html">
             <input class="button_submit" type="submit" value="Writing modes challenge" />
         </form>
 
-        <form action="./flexbox.html">
+        <form action="./pages/flexbox.html">
             <input class="button_submit" type="submit" value="Flexbox" />
         </form>
 
-        <form action="./drawing.html">
+        <form action="./pages/drawing.html">
             <input class="button_submit" type="submit" value="Happy character drawing" />
         </form>
 
-        <form action="./content_item.html">
+        <form action="./pages/content_item.html">
             <input class="button_submit" type="submit" value="Immediate parents & children">
         </form>
 
-        <form action="./layout-grid.html">
+        <form action="./pages/layout-grid.html">
             <input class="button_submit" type="submit" value="Layout grid">
         </form>
 
-        <form action="./hairstyle.html">
+        <form action="./pages/hairstyle.html">
             <input class="button_submit" type="submit" value="Drawing">
         </form>
 
-        <form action="./display.html">
+        <form action="./pages/display.html">
             <input class="button_submit" type="submit" value="Display grid or inline-grid">
         </form>
 
-        <form action="./column-rows.html">
+        <form action="./pages/column-rows.html">
             <input class="button_submit" type="submit" value="Columns and rows">
         </form>
 
-        <form action="./justify-content.html">
+        <form action="./pages/justify-content.html">
             <input class="button_submit" type="submit" value="Justify-content">
         </form>
 
-        <form action="./align-content.html">
+        <form action="./pages/align-content.html">
             <input class="button_submit" type="submit" value="Align-content">
         </form>
 
-        <form action="./quiz-place-content.html">
+        <form action="./pages/quiz-place-content.html">
             <input class="button_submit" type="submit" value="Place-content">
         </form>
 
-        <form action="./location.html">
+        <form action="./pages/location.html">
             <input class="button_submit" type="submit" value="Location">
         </form>
 
-        <form action="./minmax.html">
+        <form action="./pages/minmax.html">
             <input class="button_submit" type="submit" value="Function">
         </form>
 
-        <form action="./main-grid.html">
+        <form action="./pages/main-grid.html">
             <input class="button_submit" type="submit" value="Main grid">
         </form>
 
-        <form action="./auto-fill-fit.html">
+        <form action="./pages/auto-fill-fit.html">
             <input class="button_submit" type="submit" value="Auto-fill vs auto-fit">
         </form>
 
-        <form action="./project.html">
+        <form action="./pages/project.html">
             <input class="button_submit" type="submit" value="Project">
         </form>
 
-        <form action="./tracks.html">
+        <form action="./pages/tracks.html">
             <input class="button_submit" type="submit" value="Tracks">
         </form>
 
-        <form action="./justify-self.html">
+        <form action="./pages/justify-self.html">
             <input class="button_submit" type="submit" value="Alignment justify-self">
         </form>
 
-        <form action="./align-self.html">
+        <form action="./pages/align-self.html">
             <input class="button_submit" type="submit" value="Alignment align-self">
         </form>
 
-        <form action="./place-self.html">
+        <form action="./pages/place-self.html">
             <input class="button_submit" type="submit" value="Alignment place-self">
         </form>
     </div>
