--- a/pages/align-content.html
+++ b/pages/align-content.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/justify-content.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <title>Alignment justify-content</title>
+    <link rel="stylesheet" href="../css/align-content.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <title>Alignment alight-content</title>
 </head>
 
 <body>
     <div class="header">
-        <img src="src/palettes.png" alt="logo">
-        <p>Alignment justify-content 💚</p>
+        <img src="../src/palettes.png" alt="logo">
+        <p>Alignment alight-content 💚</p>
         <span class="icon">•••</span>
     </div>
 
@@ -24,28 +24,12 @@
                 <div class="item"></div>
                 <div class="item"></div>
                 <div class="item"></div>
-            </div>
-        </div>
-
-        <div class="grid-container_two">
-            <div class="container">
-                <div class="item"></div>
-                <div class="item"></div>
                 <div class="item"></div>
                 <div class="item"></div>
             </div>
         </div>
 
-        <div class="grid-container_three">
-            <div class="container">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
-        </div>
-
-        <div class="grid-container_four">
+        <div class="grid-container">
             <div class="container_two">
                 <div class="item"></div>
                 <div class="item"></div>
@@ -56,7 +40,7 @@
             </div>
         </div>
 
-        <div class="grid-container_four">
+        <div class="grid-container">
             <div class="container_three">
                 <div class="item"></div>
                 <div class="item"></div>
@@ -67,8 +51,42 @@
             </div>
         </div>
 
-        <div class="grid-container_four">
+        <div class="grid-container">
             <div class="container_four">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+
+            </div>
+        </div>
+
+        <div class="grid-container">
+            <div class="container_five">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>
+        </div>
+
+        <div class="grid-container">
+            <div class="container_six">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>
+        </div>
+
+        <div class="grid-container">
+            <div class="container_seven">
                 <div class="item"></div>
                 <div class="item"></div>
                 <div class="item"></div>
