--- a/pages/column-rows.html
+++ b/pages/column-rows.html
@@ -5,21 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/quiz-place-content.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <title>Quiz Place Content</title>
+    <link rel="stylesheet" href="../css/columns-rows.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <title>Columns and rows</title>
 </head>
 
 <body>
     <div class="header">
-        <img src="src/palettes.png" alt="logo">
-        <p>Quiz Place Content 💚</p>
+        <img src="../src/palettes.png" alt="logo">
+        <p>Columns and rows 💚</p>
         <span class="icon">•••</span>
     </div>
 
     <div class="container">
         <div class="container_item">
-            <div class="item"></div>
+            <div class="item">
+                <div class="sub-item"></div>
+            </div>
         </div>
     </div>
 </body>
