--- a/pages/line-height.html
+++ b/pages/line-height.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style_margin.css">
-    <link rel="stylesheet" href="./css/style-line-height.css">
-    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="../css/style_margin.css">
+    <link rel="stylesheet" href="../css/style-line-height.css">
+    <link rel="stylesheet" href="../css/header.css">
     <title>Alignment techniques</title>
 
 </head>
 
 <body>
     <div class="header">
-        <img src="src/palettes.png" alt="logo">
+        <img src="../src/palettes.png" alt="logo">
         <p>Line-height 💚</p>
         <span class="icon">•••</span>
     </div>
