--- a/pages/place-self.html
+++ b/pages/place-self.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/justify-self.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <title>Alignment justify-self</title>
+    <link rel="stylesheet" href="../css/place-self.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <title>Alignment place-self</title>
 </head>
 
 <body>
     <div class="header">
-        <img src="src/palettes.png" alt="logo">
-        <p>Alignment justify-self 💚</p>
+        <img src="../src/palettes.png" alt="logo">
+        <p>Alignment place-self 💚</p>
         <span class="icon">•••</span>
     </div>
 
