--- a/pages/drawing.html
+++ b/pages/drawing.html
@@ -5,24 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/hairstyle.css">
+    <link rel="stylesheet" href="../css/drawing.css">
     <title>Drawing</title>
 </head>
 
 <body>
     <div class="container">
         <div class="square">
-            <div class="ear_left"></div>
-            <div class="ear_right"></div>
-            <div class="body"></div>
             <div class="head">
-                <div class="hair_left"></div>
-                <div class="hair_right"></div>
-                <div class="hair"></div>
-                <div class="eyebrow-left"></div>
-                <div class="eyebrow-right"></div>
-                <div class="eye-left"></div>
-                <div class="eye-right"></div>
+                <div class="neck"></div>
+                <div class="had"></div>
+                <div class="had_"></div>
+                <div class="eye-left">
+                    <div class="pupila-lefr"></div>
+                </div>
+                <div class="eye-right">
+                    <div class="pupila-right"></div>
+                </div>
                 <div class="beard">
                     <div class="nose"></div>
                     <div class="mouth">
@@ -30,6 +29,13 @@
                         <div class="tongue"></div>
                     </div>
                 </div>
+                <div class="ear_left">
+                    <div class="small_ear_left"></div>
+                </div>
+                <div class="ear_right">
+                    <div class="small_ear_right"></div>
+                </div>
+
             </div>
         </div>
     </div>
