--- a/pages/layout-grid.html
+++ b/pages/layout-grid.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/layout-grid.css">
-    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="../css/layout-grid.css">
+    <link rel="stylesheet" href="../css/header.css">
     <title>Layout grid</title>
 </head>
 
 <body>
     <div class="header">
-        <img src="src/palettes.png" alt="logo">
+        <img src="../src/palettes.png" alt="logo">
         <p>Pallettes 💚</p>
         <span class="icon">•••</span>
     </div>
