--- a/pages/quiz-place-content.html
+++ b/pages/quiz-place-content.html
@@ -5,25 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/content_item.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <title>Parents and children</title>
+    <link rel="stylesheet" href="../css/quiz-place-content.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <title>Quiz Place Content</title>
 </head>
 
 <body>
     <div class="header">
-        <img src="src/palettes.png" alt="logo">
-        <p>Parents and children 💚</p>
+        <img src="../src/palettes.png" alt="logo">
+        <p>Quiz Place Content 💚</p>
         <span class="icon">•••</span>
     </div>
 
     <div class="container">
         <div class="container_item">
-            <div class="item">
-                <div class="sub-item">
-                    💚
-                </div>
-            </div>
+            <div class="item"></div>
         </div>
     </div>
 </body>
