Added missing half queries for mobile devices.

--- a/pages/content_item.html
+++ b/pages/content_item.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="header">
-        <img src="../src/palettes.png" alt="logo">
+        <img src="../src/img/palettes.png" alt="logo">
         <p>Parents and children 💚</p>
         <span class="icon">•••</span>
     </div>
