--- a/pages/line-height.html
+++ b/pages/line-height.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="header">
-        <img src="../src/palettes.png" alt="logo">
+        <img src="../src/img/palettes.png" alt="logo">
         <p>Line-height 💚</p>
         <span class="icon">•••</span>
     </div>
