--- a/pages/positions.html
+++ b/pages/positions.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="header">
-        <img src="../src/palettes.png" alt="logo">
+        <img src="../src/img/palettes.png" alt="logo">
         <p>Positions 💚</p>
         <span class="icon">•••</span>
     </div>
