--- a/pages/flexbox.html
+++ b/pages/flexbox.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="header">
-        <img src="../src/palettes.png" alt="logo">
+        <img src="../src/img/palettes.png" alt="logo">
         <p>Flexbox 💚</p>
         <span class="icon">•••</span>
     </div>
